--- a/CMSv4/Areas/CMS/Views/Pagina/Index.cshtml
+++ b/CMSv4/Areas/CMS/Views/Pagina/Index.cshtml
@@ -101,7 +101,7 @@
                             var linha = "<div style='overflow: hidden; width: 100px; height: 70px;'>";
 
                             linha = linha + "<a style='display: block;' href='@urlEditar" + data + "'>";
-                            linha = linha + "<img style='max-width: 100%;' alt='' src='/portal/braskem/img/spinner.gif' data-src='" + url + "' title='" + data + "' />";
+                            linha = linha + "<img style='max-width: 100%;' alt='' src='/content/img/spinner.gif' data-src='" + url + "' title='" + data + "' />";
                             linha = linha + "</a>";
                             linha = linha + "</div>";
 
