--- a/CMSv4/Areas/Modulo/Views/RedeSocial/Destaque.cshtml
+++ b/CMSv4/Areas/Modulo/Views/RedeSocial/Destaque.cshtml
@@ -1,6 +1,6 @@
 ﻿@model MLModuloRedeSocial
 <div id="divDestaqueRedesSociais_@Model.Repositorio" data-loading data-loading-target>
-    <h2>@(Model.Titulo ?? T("Braskem na Rede"))</h2>
+    <h2>@(Model.Titulo ?? T("Na Rede"))</h2>
     <!-- list-social -->
     <ul class="list-social list-unstyled" id="ulDestaqueRedesSociais_@Model.Repositorio"></ul>
     <!-- /list-social -->
