--- a/CMSv4/Portal/Principal/layouts/_LayoutSite.cshtml
+++ b/CMSv4/Portal/Principal/layouts/_LayoutSite.cshtml
@@ -141,6 +141,7 @@
     <script src="@Url.Content(baseUrl + "js/calendar.js")"></script>
     <script src="@Url.Content(baseUrl + "js/main.min.js")"></script>
      <script src="@Url.Content(baseUrl + "modulos/busca.js")"></script>
+     <script src="@Url.Content(baseUrl + "js/newsreefer.js")"></script>
      <script>
        
      </script>
