Alterações/remoções e renomeações de arquivos para limpeza do código Pt.1

--- a/CMSv4/Content/areaconstrucao/escolher-portal.css
+++ b/CMSv4/Content/areaconstrucao/escolher-portal.css
@@ -284,7 +284,7 @@
 
     [class^="icon-"]:before,
     [class*=" icon-"]:before {
-        font-family: "braskem-portal" !important;
+        font-family: "alianca-portal" !important;
         font-style: normal !important;
         font-weight: normal !important;
         font-variant: normal !important;
