--- a/CMSv4/Templates/email-compartilhar.html
+++ b/CMSv4/Templates/email-compartilhar.html
@@ -2,14 +2,14 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <meta content="text/html; charset=utf-8" http-equiv="Content-Type"/>
-    <title>Braskem - Notícia Compartilhada
+    <title>Aliança - Notícia Compartilhada
     </title>
   </head>
   <body>
     <table cellpadding="0" cellspacing="0" width="500" align="center" >
       <tr>
         <td style="width:500px; background: #dc2730; padding: 15px 0;" align="left">
-          <img style="margin: 0 auto; display: block;" src="http://www.braskem.com.br/portal/principal/includes/css/imagens/n_braskem-email.png" alt="Braskem" style="border:0px;"/>
+          <img style="margin: 0 auto; display: block;" src=" alt="Alianca" style="border:0px;"/>
         </td>
       </tr>
       <tr>
