--- a/CMSv4/Templates/email-compartilhar-pagina.html
+++ b/CMSv4/Templates/email-compartilhar-pagina.html
@@ -9,7 +9,7 @@
     <table cellpadding="0" cellspacing="0" width="500" align="center" >
       <tr>
         <td style="width:500px; background: #dc2730; padding: 15px 0;" align="left">
-          <img style="margin: 0 auto; display: block;" src="http://www.vm2.com.br/portal/principal/includes/css/imagens/n_braskem-email.png" alt="Braskem" style="border:0px;"/>
+          <img style="margin: 0 auto; display: block;" src="" alt="Aliança" style="border:0px;"/>
         </td>
       </tr>
       <tr>
