APTOP_FASE2_001_Tela administrativa para gestão de custos e penalidades

--- a/CMSv4/Areas/ModuloAdmin/Views/GestaoDeCustosPenalidades/Item.cshtml
+++ b/CMSv4/Areas/ModuloAdmin/Views/GestaoDeCustosPenalidades/Item.cshtml
@@ -59,7 +59,7 @@
                 @*Usuario*@
                 <div class="form-group col-md-4">
                     <label>@TAdm("Usuário")</label>
-                    <input type="text" name="Usuario" id="Usuario" class="form-control" value="@usuario.Nome" maxlength="50" readonly />                  
+                    <input type="text" name="Usuario" id="Usuario" class="form-control" value="@usuario.Login" maxlength="50" readonly />                  
                 </div>
 
                 @*DataAtualização*@
