APTOP_FASE2_004_Ajuste a tela administrativa de programação de proposta

--- a/CMSv4/Areas/ModuloAdmin/Views/ProgramacaoProposta/Index.cshtml
+++ b/CMSv4/Areas/ModuloAdmin/Views/ProgramacaoProposta/Index.cshtml
@@ -16,6 +16,7 @@
             {
                 <button class="btn btn-blue" data-toggle="modal" data-target="#modalHistorico" onclick="AtualizarHistorico()"><i class="fa fa-history"></i> @TAdm("Histórico Importação")</button>
                 <button class="btn btn-green" data-toggle="modal" data-target="#modalImportacao">@TAdm("Importar")</button>
+                <a class="btn btn-green" href="@urlEditar">@TAdm("Adicionar")</a>
             }
             @Helpers.BotaoExcluir(T("Excluir"))
         </div>
